--- a/Nandita Reddy_V01108257_A1b.ipynb
+++ b/Nandita Reddy_V01108257_A1b.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "9d35296f",
    "metadata": {
     "ExecuteTime": {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "ccea5d65",
    "metadata": {
     "ExecuteTime": {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "4e18af9c",
    "metadata": {
     "ExecuteTime": {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "c9f1dae5",
    "metadata": {
     "ExecuteTime": {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "id": "890ec4e9",
    "metadata": {
     "ExecuteTime": {
@@ -130,7 +130,7 @@
        "1   Anrich Nortje  6.5 crore  650              1     NaN"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "id": "00ad1fbf",
    "metadata": {
     "ExecuteTime": {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "id": "331874aa",
    "metadata": {
     "ExecuteTime": {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "id": "91b9ac8b",
    "metadata": {
     "ExecuteTime": {
@@ -296,7 +296,7 @@
        "[177 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "id": "42fc1a03",
    "metadata": {
     "ExecuteTime": {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "id": "1d8cefcb",
    "metadata": {
     "ExecuteTime": {
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "id": "1ca892df",
    "metadata": {
     "ExecuteTime": {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "id": "05e04474",
    "metadata": {
     "ExecuteTime": {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "id": "695a2d7f",
    "metadata": {
     "ExecuteTime": {
@@ -586,7 +586,7 @@
        "4    335982  2008            0                    0  P Kumar  BB McCullum"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "id": "85783410",
    "metadata": {
     "ExecuteTime": {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "id": "55e15b78",
    "metadata": {
     "ExecuteTime": {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "id": "7ddf1dfe",
    "metadata": {
     "ExecuteTime": {
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "id": "d75c7310",
    "metadata": {
     "ExecuteTime": {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "id": "c5b07d43",
    "metadata": {
     "ExecuteTime": {
@@ -722,7 +722,7 @@
        " 2022: ['JC Buttler', 'KL Rahul', 'Q de Kock']}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "id": "80d9466a",
    "metadata": {
     "ExecuteTime": {
@@ -1079,7 +1079,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "id": "9e52f5ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "id": "2ff8cda8",
    "metadata": {
     "ExecuteTime": {
@@ -1094,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "id": "b6a46d55",
    "metadata": {
     "ExecuteTime": {
@@ -1131,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "id": "837998fd",
    "metadata": {
     "ExecuteTime": {
@@ -1148,7 +1156,7 @@
        " 2022: ['YS Chahal', 'PWH de Silva', 'K Rabada']}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 70,
    "id": "6bab9324",
    "metadata": {
     "ExecuteTime": {
@@ -1509,8 +1517,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "dd7734a7",
+   "execution_count": 71,
+   "id": "38d7f5ac",
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1568,7 @@
        "  140.5794643798755))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1588,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "id": "789ddaf2",
    "metadata": {
     "ExecuteTime": {
@@ -1603,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 73,
    "id": "6ba9a083",
    "metadata": {
     "ExecuteTime": {
@@ -1616,23 +1624,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting fuzzywuzzy\n",
-      "  Obtaining dependency information for fuzzywuzzy from https://files.pythonhosted.org/packages/43/ff/74f23998ad2f93b945c0309f825be92e04e0348e062026998b5eefef4c33/fuzzywuzzy-0.18.0-py2.py3-none-any.whl.metadata\n",
-      "  Downloading fuzzywuzzy-0.18.0-py2.py3-none-any.whl.metadata (4.9 kB)\n",
-      "Downloading fuzzywuzzy-0.18.0-py2.py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: fuzzywuzzy\n",
-      "Successfully installed fuzzywuzzy-0.18.0\n",
+      "Requirement already satisfied: fuzzywuzzy in /Users/nanditareddy/anaconda3/lib/python3.11/site-packages (0.18.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "pip install fuzzywuzzy"
+    "#pip install fuzzywuzzy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 74,
    "id": "ccd0c41e",
    "metadata": {
     "ExecuteTime": {
@@ -1662,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 75,
    "id": "307e8a5f",
    "metadata": {
     "ExecuteTime": {
@@ -1700,7 +1703,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 77,
+   "id": "961dbe6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "********\n",
+      "Player: Shubman Gill\n",
+      "Total runs scored in 2022: 483\n",
+      "Total runs scored in 2023: 890\n",
+      "Total runs scored in 2024: 320\n",
+      "********\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the IPL ball-by-ball data\n",
+    "ball_by_ball_data = pd.read_csv('/Users/nanditareddy/Desktop/R BOOTCAMP/A1b/IPL_ball_by_ball_updated till 2024.csv')\n",
+    "\n",
+    "# Extract data for the last three years (considering the data is up to 2024, last three years are 2022, 2023, 2024)\n",
+    "last_three_years = ball_by_ball_data[ball_by_ball_data['Season'].isin([2022, 2023, 2024])]\n",
+    "\n",
+    "# Group the data by 'Striker' and 'Matchid', then sum the 'runs_scored'\n",
+    "runs_last_three_years = last_three_years.groupby(['Striker', 'Match id'])[['runs_scored']].sum().reset_index()\n",
+    "\n",
+    "# Extract data for each of the last three years separately\n",
+    "runs_2022 = last_three_years[last_three_years['Season'] == 2022]\n",
+    "runs_2023 = last_three_years[last_three_years['Season'] == 2023]\n",
+    "runs_2024 = last_three_years[last_three_years['Season'] == 2024]\n",
+    "\n",
+    "# Sum the runs scored by P Simran Singh in each year\n",
+    "total_runs_2022 = runs_2022[runs_2022[\"Striker\"] == \"Shubman Gill\"][\"runs_scored\"].sum()\n",
+    "total_runs_2023 = runs_2023[runs_2023[\"Striker\"] == \"Shubman Gill\"][\"runs_scored\"].sum()\n",
+    "total_runs_2024 = runs_2024[runs_2024[\"Striker\"] == \"Shubman Gill\"][\"runs_scored\"].sum()\n",
+    "\n",
+    "print(\"********\")\n",
+    "print(\"Player: Shubman Gill\")\n",
+    "print(f\"Total runs scored in 2022: {total_runs_2022}\")\n",
+    "print(f\"Total runs scored in 2023: {total_runs_2023}\")\n",
+    "print(f\"Total runs scored in 2024: {total_runs_2024}\")\n",
+    "print(\"********\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "508fa9a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2024: ['Shubman Gill'], 2023: ['Shubman Gill'], 2022: ['Shubman Gill']}\n",
+      "********\n",
+      "year: 2024 batsman: Shubman Gill\n",
+      "p value for alpha = 0.19370998562525304\n",
+      "p value for beta = 0.354571603335391\n",
+      "p value for betaprime = 0.3320890781747336\n",
+      "p value for burr12 = 0.17538338566759118\n",
+      "p value for crystalball = 0.04047307341344898\n",
+      "p value for dgamma = 0.004654508243065066\n",
+      "p value for dweibull = 0.011388953681874727\n",
+      "p value for erlang = 0.10415431199992474\n",
+      "p value for exponnorm = 0.40764798429861204\n",
+      "p value for f = 1.211921514554867e-19\n",
+      "p value for fatiguelife = 0.22039150309098005\n",
+      "p value for gamma = 0.01932605267751182\n",
+      "p value for gengamma = 0.15830394669705855\n",
+      "p value for gumbel_l = 0.00016365306017313027\n",
+      "p value for johnsonsb = 0.6214006077216168\n",
+      "p value for kappa4 = 8.537718673686839e-12\n",
+      "p value for lognorm = 3.0444374367609376e-26\n",
+      "p value for nct = 0.1081970579513025\n",
+      "p value for norm = 0.04047307253461193\n",
+      "p value for norminvgauss = 0.22568094930025248\n",
+      "p value for powernorm = 0.008933578018930344\n",
+      "p value for rice = 0.009231529839374445\n",
+      "p value for recipinvgauss = 0.25695076184687626\n",
+      "p value for t = 0.0628875711742004\n",
+      "p value for trapz = 7.559368072972744e-39\n",
+      "p value for truncnorm = 0.033222630464286806\n",
+      "\n",
+      "Best fitting distribution: johnsonsb\n",
+      "Best p value: 0.6214006077216168\n",
+      "Parameters for the best fit: (1.127462972555547, 0.7082040622620326, -1.0785135120261573, 140.5794643798755)\n",
+      "\n",
+      "\n",
+      "\n",
+      "********\n",
+      "year: 2023 batsman: Shubman Gill\n",
+      "p value for alpha = 0.19370998562525304\n",
+      "p value for beta = 0.354571603335391\n",
+      "p value for betaprime = 0.3320890781747336\n",
+      "p value for burr12 = 0.17538338566759118\n",
+      "p value for crystalball = 0.04047307341344898\n",
+      "p value for dgamma = 0.004654508243065066\n",
+      "p value for dweibull = 0.011388953681874727\n",
+      "p value for erlang = 0.10415431199992474\n",
+      "p value for exponnorm = 0.40764798429861204\n",
+      "p value for f = 1.211921514554867e-19\n",
+      "p value for fatiguelife = 0.22039150309098005\n",
+      "p value for gamma = 0.01932605267751182\n",
+      "p value for gengamma = 0.15830394669705855\n",
+      "p value for gumbel_l = 0.00016365306017313027\n",
+      "p value for johnsonsb = 0.6214006077216168\n",
+      "p value for kappa4 = 8.537718673686839e-12\n",
+      "p value for lognorm = 3.0444374367609376e-26\n",
+      "p value for nct = 0.1081970579513025\n",
+      "p value for norm = 0.04047307253461193\n",
+      "p value for norminvgauss = 0.22568094930025248\n",
+      "p value for powernorm = 0.008933578018930344\n",
+      "p value for rice = 0.009231529839374445\n",
+      "p value for recipinvgauss = 0.25695076184687626\n",
+      "p value for t = 0.0628875711742004\n",
+      "p value for trapz = 7.559368072972744e-39\n",
+      "p value for truncnorm = 0.033222630464286806\n",
+      "\n",
+      "Best fitting distribution: johnsonsb\n",
+      "Best p value: 0.6214006077216168\n",
+      "Parameters for the best fit: (1.127462972555547, 0.7082040622620326, -1.0785135120261573, 140.5794643798755)\n",
+      "\n",
+      "\n",
+      "\n",
+      "********\n",
+      "year: 2022 batsman: Shubman Gill\n",
+      "p value for alpha = 0.19370998562525304\n",
+      "p value for beta = 0.354571603335391\n",
+      "p value for betaprime = 0.3320890781747336\n",
+      "p value for burr12 = 0.17538338566759118\n",
+      "p value for crystalball = 0.04047307341344898\n",
+      "p value for dgamma = 0.004654508243065066\n",
+      "p value for dweibull = 0.011388953681874727\n",
+      "p value for erlang = 0.10415431199992474\n",
+      "p value for exponnorm = 0.40764798429861204\n",
+      "p value for f = 1.211921514554867e-19\n",
+      "p value for fatiguelife = 0.22039150309098005\n",
+      "p value for gamma = 0.01932605267751182\n",
+      "p value for gengamma = 0.15830394669705855\n",
+      "p value for gumbel_l = 0.00016365306017313027\n",
+      "p value for johnsonsb = 0.6214006077216168\n",
+      "p value for kappa4 = 8.537718673686839e-12\n",
+      "p value for lognorm = 3.0444374367609376e-26\n",
+      "p value for nct = 0.1081970579513025\n",
+      "p value for norm = 0.04047307253461193\n",
+      "p value for norminvgauss = 0.22568094930025248\n",
+      "p value for powernorm = 0.008933578018930344\n",
+      "p value for rice = 0.009231529839374445\n",
+      "p value for recipinvgauss = 0.25695076184687626\n",
+      "p value for t = 0.0628875711742004\n",
+      "p value for trapz = 7.559368072972744e-39\n",
+      "p value for truncnorm = 0.033222630464286806\n",
+      "\n",
+      "Best fitting distribution: johnsonsb\n",
+      "Best p value: 0.6214006077216168\n",
+      "Parameters for the best fit: (1.127462972555547, 0.7082040622620326, -1.0785135120261573, 140.5794643798755)\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the dictionary to store top bowlers for each of the last three years\n",
+    "list_top_batsman_last_three_year = {}\n",
+    "\n",
+    "# Loop through the unique years in the dataset, limited to the last three years\n",
+    "for i in total_run_each_year[\"year\"].unique()[:3]:\n",
+    "    # Filter the dataset to include only records for P Simran Singh in the current year\n",
+    "    Shubman_Gill = total_run_each_year[(total_run_each_year[\"year\"] == i) & (total_run_each_year[\"Striker\"] == \"Shubman Gill\")]\n",
+    "    # Get the unique list of years where Shubman Gill appears in the filtered dataset\n",
+    "    list_top_batsman_last_three_year[i] = Shubman_Gill[\"Striker\"].unique().tolist()\n",
+    "\n",
+    "# Print the dictionary to verify the results\n",
+    "print(list_top_batsman_last_three_year)\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Group by Batsman and Match id, then sum the wickets\n",
+    "wickets = ipl_bbbc.groupby(['Striker', 'Match id'])[['runs_scored']].sum().reset_index()\n",
+    "\n",
+    "# Loop through the dictionary to process Shubman Gill's data for each year\n",
+    "for year, strikers in list_top_batsman_last_three_year.items():\n",
+    "    for striker in strikers:\n",
+    "        if striker == \"Shubman Gill\":\n",
+    "            print(\"********\")\n",
+    "            print(\"year:\", year, \"batsman:\", striker)\n",
+    "            get_best_distribution(runs[runs[\"Striker\"] ==striker][\"runs_scored\"])\n",
+    "            print(\"\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1bc2489",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "id": "d24035b7",
    "metadata": {
     "ExecuteTime": {
@@ -1727,7 +1940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5220bc7d",
+   "id": "48f46ce4",
    "metadata": {},
    "outputs": [],
    "source": []
